<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.easysoa.sample</groupId>
  <artifactId>easysoa-discovery-code-sample-itf</artifactId>
  <packaging>jar</packaging>
  <name>EasySOA Discovery code sample - AXXX Web services Itf</name>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/easysoa/EasySOA-Incubation.git</connection>
    <url>scm:git:https://github.com/easysoa/EasySOA-Incubation.git</url>
  </scm>
   
  <dependencies>
  	<dependency>
	  <groupId>javax.ws.rs</groupId>
	  <artifactId>jsr311-api</artifactId>
	  <version>1.1.1</version>
  	</dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Compile with Java 1.6 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings 
          only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.easysoa.discovery.code</groupId>
                    <artifactId>easysoa-discovery-code-mavenplugin</artifactId>
                    <versionRange>[0.9-SNAPSHOT,)</versionRange>
                    <goals>
                      <goal>discover</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  
  <profiles>
      
    <profile>
      <id>sonar</id>
      <!-- For code coverage with Sonar and cobertura
      requires a "main" build :
      -U -Dtest=false -DfailIfNoTests=false -Psonar clean install -s "/home/openwide/.m2/settings.xml.easysoa"
      and a post-build sonar action with its own build :
      -Psonar -DargLine=""
      and enough memory :
      -Xmx512m -XX:MaxPermSize=256m
      -->
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.6</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    
  </profiles>
  
</project>
